Fixed unnecessary scrollbar in articles

--- a/styles.css
+++ b/styles.css
@@ -251,7 +251,7 @@ t tsub {
 }
 
 .article {
-    overflow-y: scroll;
+    overflow-y: auto;
     position: relative;
     display: flex;
     align-items: flex-start;
